# mcmv_core

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
resources/: mcmv_core.aps  mcmv_core.rc  mcmv_core.res  mcmv_gui.rc
scripts/: populate_libs.bat  populate_libs.sh
src/: main.cpp  main_gui.cpp
src/armature/: armature_format_adapter.cpp  armature_format_adapter.h  joint.cpp  joint.h
src/export/bedrock/: armature_exporter.h  bedrock_exporter.cpp  bedrock_exporter.h
src/import/: armature_importer.h  file_reader.cpp  file_reader.h
src/import/bb/: bb_importer.cpp  bb_importer.h  bb_parser.cpp  bb_parser.h
src/import/bvh/: bvh_importer.cpp  bvh_importer.h  bvh_lexer.cpp  bvh_lexer.h  bvh_parser.cpp  bvh_parser.h
src/math/: euler.cpp  euler.h  quaternion.cpp  quaternion.h  vector3.cpp  vector3.h
src/thread_pool/: thread_pool.cpp  thread_pool.h
src/ui/: file_dialog.cpp  file_dialog.h  joint_combo.cpp  joint_combo.h  joint_headers.h  joint_list_builder.cpp  joint_list_builder.h  makeui.cpp  makeui.h  ui_pages.cpp
tests/functional/: f_line.cpp
tests/helper/: helper.h
tests/manual/: m_line.cpp
tests/manual/line/: curved_line.animation.json  curved_line.bbmodel  curved_line.bvh  curved_line_missing_c.bbmodel  forked_line.animation.json  forked_line.bbmodel  forked_line.bvh  very_curved_line.bvh
